--- a/JavaScript/test/index.html
+++ b/JavaScript/test/index.html
@@ -24,7 +24,6 @@
                 x = j - i
                 y = Math.min(height[i], height[j])
                 max = Math.max(max, x * y)
-                debugger;
                 if (height[i] > height[j]) {
                     // while (height[j] < height[i] && j > i) {
                     j--
@@ -38,7 +37,23 @@
             return max
         };
         const result = maxArea([1, 2, 4, 3])
-        console.log(result)
+    </script>
+    <script>
+        var largestRectangleArea = function(heights) {
+            // 1. 暴力解法
+            let maxArea = heights[0] || 0
+            for (let i = 0; i < heights.length; i++) {
+                let minHeight = heights[i]
+                for (let j = i; j < heights.length; j++) {
+                    if (heights[j] < minHeight) break
+                    const width = j - i + 1
+                    minHeight = Math.min(heights[j], minHeight)
+                    maxArea = Math.max(width*minHeight, maxArea)
+                }
+            }
+            return maxArea
+        }
+        console.log(largestRectangleArea([2,4]))
     </script>
 </body>
 
