--- a/JavaScript/test/index.html
+++ b/JavaScript/test/index.html
@@ -40,20 +40,27 @@
     </script>
     <script>
         var largestRectangleArea = function(heights) {
-            // 1. 暴力解法
-            let maxArea = heights[0] || 0
+            let stack = [-1]
+            let maxArea = 0
             for (let i = 0; i < heights.length; i++) {
-                let minHeight = heights[i]
-                for (let j = i; j < heights.length; j++) {
-                    if (heights[j] < minHeight) break
-                    const width = j - i + 1
-                    minHeight = Math.min(heights[j], minHeight)
-                    maxArea = Math.max(width*minHeight, maxArea)
+                while (stack[stack.length - 1] !== -1 && heights[stack[stack.length - 1]] > heights[i]) {
+                    const top = stack.pop()
+                    maxArea = Math.max(
+                        maxArea, 
+                        heights[top] * (i - stack[stack.length - 1] - 1)
+                    )
                 }
+                stack.push(i)
+            }
+            while (stack[stack.length - 1] !== -1) {
+                maxArea = Math.max(
+                    maxArea, 
+                    heights[stack.pop()]
+                )
             }
             return maxArea
         }
-        console.log(largestRectangleArea([2,4]))
+        console.log(largestRectangleArea([1]))
     </script>
 </body>
 
